--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
+    "currency-codes": "^2.1.0",
+    "lodash": "^4.17.15",
+    "moment": "^2.24.0",
+    "numeral": "^2.0.6",
+    "parse-decimal-number": "^1.0.0",
     "quasar": "^1.0.0",
     "vue-i18n": "^8.0.0"
   },
